--- a/platformio.ini
+++ b/platformio.ini
@@ -1,44 +1,27 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-; Choose your board once
+; PlatformIO Project Configuration File for Lab 5
 [platformio]
-default_envs = lab5_ex1        ; switch this (or use the env picker in VS Code)
+default_envs = wokwi
 
-[env]
+[env:wokwi]
 platform = espressif32
-framework = arduino
 board = esp32dev
-; board_build.partitions = custom_partition.csv
-board_build.partitions = default.csv
-
+framework = arduino
 monitor_speed = 115200
 monitor_filters = send_on_enter
 monitor_eol = CRLF
 monitor_echo = yes
 
-lib_deps = 
-  duinowitchery/hd44780@^1.3.2       ; I2C 16x2 LCD (PCF8574 etc.)
-  ; HTTPUpdate                          ; ESP32 HTTP/HTTPS OTA Update library
-  dlloydev/ESP32 ESP32S2 AnalogWrite@^5.0.2
-  knolleary/PubSubClient@^2.8        ; MQTT client
-  bblanchon/ArduinoJson@^7           ; JSON for MQTT/HTTP payloads
-  
-; post-build script that copies outputs to a stable path
-extra_scripts = post:scripts/copy_fw.py
+; Libraries dependencies
+lib_deps =
+    duinowitchery/hd44780@^1.3.2       ; I2C LCD
+    knolleary/PubSubClient@^2.8        ; MQTT client
+    dlloydev/ESP32 ESP32S2 AnalogWrite@^5.0.2
+    bblanchon/ArduinoJson@^7           ; JSON (optional, useful for MQTT payloads)
 
-[env:lab5_ex1]
+; Source file
 build_src_filter = +<lab5_ex1.cpp>
 
-[env:example_esp32_memsize]
-build_src_filter = +<example_esp32_memsize.cpp>
-
+; Optional: extra build flags
+; build_flags = -DLED_BUILTIN=2
 
 
